--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -3,10 +3,10 @@
 html
     font-family: "Poppins"
     font-size: 15px
-    background: #1a3d72
 
 main
     width: 100%
+    background: #f7f9fc
     
 #root
     display: flex
