--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -7,7 +7,7 @@
     width: 260px
     height: 100vh
     margin-left: 0px
-    padding: 18px 26px
+    padding: 18px
     background: $main-color
     transition: .5s margin-left
     &-header
@@ -29,11 +29,18 @@
         & a
             display: flex
             align-items: center
+            height: 2.2em
+            padding: .5em 1em
+            border-radius: 5px
             font-weight: 500
             text-decoration: none
             color: #e2e8ee
+            span
+                flex-grow: 1
+                word-break: break-all
             &:hover
                 color: #fff
+                background: rgba(255, 255, 255, .4)
 
 .side-navbar-close
     margin-left: -260px
