Меню для конфигурирования элементов

--- a/RealtimeDataPortal/ClientApp/src/components/header/header.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/header/header.sass
@@ -35,4 +35,14 @@
             transition: .5s all
             transform: rotate(0deg)
 
+.mantine-Menu-item 
+    color: $menu-color
+
+.mantine-Menu-itemLabel
+    width: 100%
+    label
+        display: flex
+        justify-content: space-between
+        width: 100%
+
 
