--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -2,7 +2,7 @@
 
 html
     font-family: "Poppins"
-    font-size: 15px
+    font-size: 14px
 
 main
     width: 100%
@@ -10,3 +10,7 @@ main
     
 #root
     display: flex
+
+ul
+    padding: 0 2em
+    list-style-type: none
