Получение данных для отображения внещних страниц. Скелет для внешних странииц

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -58,3 +58,6 @@ $navbar-width: 280px
 .side-navbar-close
     margin-left: -$navbar-width
     transition: .5s margin-left
+
+.skeleton
+    background: rgba(0, 0, 0, .4)
