--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -17,3 +17,8 @@ ul
 
 .container
     padding: 2.5rem 2.5rem 1.5rem 2.5rem
+
+.info-block
+    margin-top: 16px
+    background: #fff
+    box-shadow: 0 0 0.875rem 0 rgb(41 48 66 / 5%)
