Переход на страницу конфигурации. Получение информации об изменяемом компоненте

--- a/RealtimeDataPortal/ClientApp/src/components/loader/appPreloader.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/loader/appPreloader.sass
@@ -7,4 +7,5 @@
         display: block
         margin: auto auto
     &_height 
-        height: calc(100vh - 66px)
+        height: calc(100vh - 122px)
+        margin-top: -66px
