Обновление меню навбара при редатировании компонентов

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
@@ -1,8 +1,10 @@
 .folder
     ul
         padding: 0 0 0 1.3em
+        margin-bottom: 0
     &-with-configurator
         display: flex
+        margin: 5px 0
         align-items: center
         border-radius: 5px
         &:hover
