Работа на графиками

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -60,4 +60,6 @@ $navbar-width: 280px
     transition: .5s margin-left
 
 .skeleton
-    background: rgba(0, 0, 0, .4)
+    margin: 5px 0
+    &::before
+        background: rgba(255, 255, 255, .4)
