--- a/RealtimeDataPortal/ClientApp/src/components/external-page/externalPage.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/external-page/externalPage.sass
@@ -1,9 +1,10 @@
 @import '../../style/_variables'
 
 .title
+    flex-grow: 1
     font-size: 1.4rem
     font-weight: 500
     color: $menu-color
 
 .external-page
-    height: calc(100vh - 166px)
+    height: calc(100vh - 166px - 1rem)
