--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -16,9 +16,9 @@ ul
     list-style-type: none
 
 .container
-    padding: 2.5rem 2.5rem 1.5rem 2.5rem
+    padding: 1.5rem 2.5rem 1.5rem 2.5rem
 
 .info-block
-    margin-top: 16px
+    margin-top: 2rem
     background: #fff
     box-shadow: 0 0 0.875rem 0 rgb(41 48 66 / 5%)
