--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -31,6 +31,7 @@
         margin-top: 0
         z-index: 9999
     .graphic
+        position: relative
         height: 400px
         padding: 1rem 2rem
     &__header
@@ -77,4 +78,8 @@
     .tab-content
         .graphic
             height: 270px
-    
+
+.tooltip-chart
+    color: #000
+    border: 1px solid rgb(241, 241, 241)
+    border-radius: 50%
