отображение таблиц для графиков

--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -32,7 +32,7 @@
         z-index: 9999
     .graphic
         position: relative
-        height: 400px
+        min-height: 400px
         padding: 1rem 2rem
     &__header
         display: flex
@@ -62,22 +62,22 @@
 @media ( max-width: 1400px )
     .tab-content
         .graphic
-            height: 370px
+            min-height: 370px
 
 @media ( max-width: 1200px )
     .tab-content
         .graphic
-            height: 350px
+            min-height: 350px
 
 @media ( max-width: 992px )
     .tab-content
         .graphic
-            height: 300px
+            min-height: 300px
 
 @media ( max-width: 768px )
     .tab-content
         .graphic
-            height: 270px
+            min-height: 270px
 
 .tooltip-chart
     color: #000
