--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -46,7 +46,7 @@
             cursor: pointer
             span
                 flex-grow: 1
-                word-break: break-all
+                word-break: word-break
             /** &:hover
                 color: #fff
                 background: rgba(255, 255, 255, .4) **/
