--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -22,16 +22,9 @@
         padding: 1rem 2rem
         .title
             font-size: 1.1rem
-    .fullscreen
-        position: fixed
-        top: 15px
-        right: 15px
-        bottom: 15px
-        left: 15px
-        margin-top: 0
-        z-index: 9999
     .graphic
         position: relative
+        width: 100%
         min-height: 400px
         padding: 1rem 2rem
     &__header
