Получение значений для таблицы РВ

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -2,7 +2,7 @@
 
 .info-block__table
     margin-top: 0
-    padding: 0 2rem
+    padding: 0 2rem 2rem 2rem
     .header
         padding: 0
         box-shadow: none
