Доваление/редактирование внешних страниц

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -16,6 +16,7 @@
     &__tag-info
         border: none
         box-shadow: none
+        background: #2C2E33
     .painted
         background: #F1F3F5
     .section
@@ -33,9 +34,9 @@
             color: #373A40
 .mantine-Popover-inner
     padding: 0rem
-.mantine-Notification-root
-    background: #2C2E33
-.mantine-Text-root.mantine-Notification-description.mantine-tufsn2
-    color: #F8F9FA
+/** .mantine-Notification-root
+    background: #2C2E33 **/
+/** .mantine-Text-root.mantine-Notification-description.mantine-tufsn2
+    color: #F8F9FA **/
 .mantine-ptywf3.mantine-Popover-body
     border: none
