--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -29,6 +29,11 @@ ul
     padding: 1.5rem 2.5rem 1.5rem 2.5rem
 
 .info-block
+    margin: 0 auto
     margin-top: 2rem
     background: #fff
     box-shadow: 0 0 0.875rem 0 rgb(41 48 66 / 5%)
+    &__form
+        max-width: 700px
+        padding: 2rem
+        border-radius: 5px
