Добавление/редактирование тегов. Сохранение данных

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -19,6 +19,7 @@
         color: #fff
         &:hover
             color: #fff
+            background: rgba(255, 255, 255, .4)
         & svg
             margin-right: .5rem
             font-size: 22px
@@ -62,3 +63,4 @@
     margin: 5px 0
     &::before
         background: rgba(255, 255, 255, .4)
+
