Форма для добавления продуктов. Проверка правильности заполнения формы

--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
@@ -1,4 +1,5 @@
 @import '../../../../style/_variables'
+@import '../../../../style/_mixins'
     
 .add-change-product
     margin: 0 auto
@@ -9,6 +10,7 @@
         padding: 1rem 2rem
         &__form
             position: relative
+            @include search-result
             fieldset
                 padding-left: 2rem 
     .mantine-11178a2
