--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
@@ -1,4 +1,5 @@
 @import '../../../../style/_variables'
+@import '../../../../style/_mixins'
 
 .add-change-tag
     margin: 0 auto
@@ -9,38 +10,7 @@
         padding: 1rem 2rem
         &__form
             position: relative
-            &__search-result
-                position: absolute
-                width: calc(100% - 55px)
-                max-height: 0px
-                margin-top: 5px
-                padding: 0
-                background-color: rgb(255, 255, 255)
-                overflow: auto
-                z-index: 2
-                &::-webkit-scrollbar
-                    width: 8px
-                &::-webkit-scrollbar-track
-                    background: #fff
-                &::-webkit-scrollbar-thumb
-                    background-color: #DEE2E6
-                    border-radius: 8px
-                &[open]
-                    max-height: 200px
-                    padding: 5px
-                    border: 1px solid rgb(233, 236, 239)
-                    border-radius: 5px
-                    box-shadow: rgb(0 0 0 / 5%) 0px 1px 3px, rgb(0 0 0 / 5%) 0px 20px 25px -5px, rgb(0 0 0 / 4%) 0px 10px 10px -5px
-                &__item
-                    width: 100%
-                    margin: 0
-                    border-radius: 4px
-                    padding: .3em 1em
-                    font-size: 14px
-                    line-height: 2em
-                    cursor: pointer
-                    &:hover
-                        background-color: rgb(241, 243, 245)
+            @include search-result
     .mantine-11178a2
         margin-right: 0
     .mantine-1euen2d 
