Поиск и выбор тега для редактирования

--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
@@ -11,6 +11,13 @@
         &__form
             position: relative
             @include search-result
+            &__fieldset__title
+                display: flex
+                align-items: center
+                h6
+                    display: block
+                    margin-bottom: 0
+                    flex-grow: 1
             fieldset
                 padding-left: 2rem 
     .mantine-11178a2
