Добавление/редактирование продукта. Реализована логика на бэкенде

--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
@@ -11,13 +11,21 @@
         &__form
             position: relative
             @include search-result
-            &__fieldset__title
-                display: flex
-                align-items: center
-                h6
-                    display: block
-                    margin-bottom: 0
-                    flex-grow: 1
+            &__fieldset
+                &__title
+                    display: flex
+                    align-items: center
+                    h6
+                        display: block
+                        margin-bottom: 0
+                        flex-grow: 1
+                &__tag-block
+                    & > div
+                        display: flex
+                        align-items: center
+                        & > div
+                            flex-grow: 1
+                            margin-right: .5rem
             fieldset
                 padding-left: 2rem 
     .mantine-11178a2
