Добавление меню конфигуратора для главной страницы. Удаление добавления папок

--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -1,5 +1,10 @@
-@import './style/_fonts'
 @import './style/_variables'
+@import './style/_fonts'
+
+
+
+*
+    font-family: "Roboto"
 
 html
     font-size: 14px
