Скроллбар для body и navbar

--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -1,8 +1,12 @@
 @import './style/_variables'
 @import './style/_fonts'
+@import './style/_mixins'
 
 html
     font-size: 14px
+
+body
+    @include scrollbar
 
 main
     width: 100%
