--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -1,4 +1,5 @@
 @import '../../style/_variables'
+@import '../../style/_mixins'
     
 .side-navbar
     position: sticky
@@ -7,9 +8,17 @@
     width: $navbar-width
     height: 100vh
     margin-left: 0px
-    padding: 18px
+    padding: 10px//18px 10px 18px 18px
     background: $main-color
     transition: .5s margin-left
+    //overflow: scroll
+    //@include scrollbar
+    //&::-webkit-scrollbar
+    //    right: -8px
+    //&::-webkit-scrollbar-track
+    //    background: $main-color
+    //&::-webkit-scrollbar-thumb
+    //    background-color: $second-color
     &-header
         display: flex
         align-items: center
@@ -19,12 +28,20 @@
         color: #fff
         &:hover
             color: #fff
-            background: rgba(255, 255, 255, .4)
         & svg
             margin-right: .5rem
             font-size: 22px
     &-items
         margin-top: 2rem
+        max-height: 100%
+        padding: 0 5px 0 8px
+        overflow: scroll
+        overflow-x: hidden
+        @include scrollbar
+        &::-webkit-scrollbar-track
+            background: $main-color
+        &::-webkit-scrollbar-thumb
+            background-color: $second-color
         svg:first-child
             margin-right: .5rem
         svg:nth-last-child(1)
