Корректировка обработки ошибок

--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -30,8 +30,10 @@
     &__header
         display: flex
         flex-wrap: wrap
+        justify-content: space-between
         .title
             margin-top: 1rem
+            color: $menu-color
         .settings
             display: flex
             flex-wrap: wrap
