--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -32,6 +32,9 @@ ul
 .container
     padding: 1.5rem 2.5rem 1.5rem 2.5rem
 
+.title
+    color: $menu-color
+
 .info-block
     margin: 0 auto
     margin-top: 2rem
