Изменение алгоритма отзывчивости графика

--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -12,11 +12,12 @@
         background: $main-color
         color: #fff
 .tab-content
-    display: none
-    height: 100%
+    overflow: hidden
+    height: 0
     background: transparent
     &_visible
         display: block
+        height: 100%
     .header
         box-shadow: none
         padding: 1rem 2rem
