Процесс корректировки графика. Переход на домашний компьютер

--- a/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/graphics/graphics.sass
@@ -28,6 +28,9 @@
         width: 100%
         min-height: 400px
         padding: 1rem 2rem
+        .table-rt
+            td
+                font-size: 12px
     &__header
         display: flex
         flex-wrap: wrap
