Корректировка внешнего вида таблица

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -4,6 +4,8 @@
     margin-top: 0
     padding: 0 2rem 2rem 2rem
     .header
+        display: flex
+        justify-content: space-between
         padding: 0
         box-shadow: none
     a
@@ -17,6 +19,8 @@
         border: none
         box-shadow: none
         background: #2C2E33
+        span
+            color: #fff
     .painted
         background: #F1F3F5
     .section
