Таблица РВ. Отсечение нулей в конце значения

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -35,6 +35,7 @@
             min-width: 4rem
             padding: .5rem .7rem
             border-bottom: 1px solid #E9ECEF
+            text-align: center
             color: #373A40
 .mantine-Popover-inner
     padding: 0rem
