Редактирование типов параметра

--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
@@ -11,18 +11,4 @@
         &__form
             position: relative
             @include search-result
-    .mantine-11178a2
-        margin-right: 0
-    .mantine-1euen2d 
-        width: 100%
-        padding: 0
-    .mantine-Tabs-tabControl
-        padding: .5rem 1rem
-        &:hover
-            background: #E9ECEF
-        &:last-child:hover
-            background: #FFE3E3
-    .mantine-Tabs-tabActive
-        color: $main-color
-    .mantine-Tabs-tabActive:last-child
-        color: #FF6B6B
+    @include add-change-form
