--- a/RealtimeDataPortal/ClientApp/src/style/_mixins.sass
+++ b/RealtimeDataPortal/ClientApp/src/style/_mixins.sass
@@ -1,3 +1,5 @@
+@import './_variables'
+
 @mixin search-result
     &__search-result
         position: absolute
@@ -57,4 +59,21 @@
         & > div
             flex-grow: 1
             margin-right: .5rem
+
+@mixin add-change-form
+    .mantine-11178a2
+        margin-right: 0
+    .mantine-1euen2d 
+        width: 100%
+        padding: 0
+    .mantine-Tabs-tabControl
+        padding: .5rem 1rem
+        &:hover
+            background: #E9ECEF
+        &:last-child:hover
+            background: #FFE3E3
+    .mantine-Tabs-tabActive
+        color: $main-color
+    .mantine-Tabs-tabActive:last-child
+        color: #FF6B6B
     
