--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -11,17 +11,11 @@
     padding: 10px//18px 10px 18px 18px
     background: $main-color
     transition: .5s margin-left
-    //overflow: scroll
-    //@include scrollbar
-    //&::-webkit-scrollbar
-    //    right: -8px
-    //&::-webkit-scrollbar-track
-    //    background: $main-color
-    //&::-webkit-scrollbar-thumb
-    //    background-color: $second-color
     &-header
         display: flex
+        justify-content: center
         align-items: center
+        padding: 10px
         font-size: 18px
         font-weight: 500
         text-decoration: none
@@ -32,7 +26,7 @@
             margin-right: .5rem
             font-size: 22px
     &-items
-        margin-top: 2rem
+        margin-top: 1rem
         max-height: 100%
         padding: 0 5px 0 8px
         overflow: scroll
