--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/product/product.sass
@@ -10,7 +10,7 @@
         padding: 1rem 2rem
         &__form
             position: relative
-            @include search-result
+            @include search-result(calc(100% - 55px))
             &__fieldset
                 @include fieldset-title
                 &__tag-block
