--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/tag/tag.sass
@@ -10,5 +10,5 @@
         padding: 1rem 2rem
         &__form
             position: relative
-            @include search-result
+            @include search-result(calc(100% - 55px))
     @include add-change-form
