--- a/RealtimeDataPortal/ClientApp/src/components/mnemoscheme/mnemoscheme.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/mnemoscheme/mnemoscheme.sass
@@ -3,3 +3,8 @@
         width: 100%
         aspect-ratio: 16/9
         padding: 2rem
+        &_subtitle
+            margin-top: 0
+            color: #6c757d
+        &__tag
+            cursor: pointer
