Конфигуратор мнемосхем. Зуммирование холста

--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -39,6 +39,7 @@ ul
     width: 100%
     margin: 0 auto
     margin-top: 2rem
+    border-radius: 8px
     background: #fff
     box-shadow: 0 0 0.875rem 0 rgb(41 48 66 / 5%)
     &__form
