Графики. Реализация смены вида графиков (по два в ряд)

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -34,14 +34,10 @@
         td
             min-width: 4rem
             padding: .5rem .7rem
-            border-bottom: 1px solid #E9ECEF
+            border-bottom: 1px solid #dbdbdb
             text-align: center
             color: #373A40
 .mantine-Popover-inner
     padding: 0rem
-/** .mantine-Notification-root
-    background: #2C2E33 **/
-/** .mantine-Text-root.mantine-Notification-description.mantine-tufsn2
-    color: #F8F9FA **/
 .mantine-ptywf3.mantine-Popover-body
     border: none
