--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/mnemoscheme/mnemoscheme.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/mnemoscheme/mnemoscheme.sass
@@ -6,9 +6,14 @@
         margin-top: 0
         padding: 0rem
     &__canvas
+        display: flex
+        justify-content: center
+        align-items: center
         padding: .5rem
-        aspect-ratio: 16/9
+        aspect-ratio: 16/7
         padding: 3.5rem 1rem 1rem 3.5rem
+        canvas
+            border: 1px solid #e7e7e7
     &__create-block
         display: flex
         flex-direction: column
@@ -24,24 +29,24 @@
         justify-content: center
         align-items: center
         width: 100%
-        padding-left: 60px
+        padding: 5px 5px 5px 60px
         position: absolute
         z-index: 2
         & > div
             margin: 0.5rem .25rem
         .mantine-ColorInput-wrapper
             input
-                max-width: 160px
+                max-width: 170px
         .mantine-NumberInput-wrapper, .mantine-Input-wrapper
             input
                 max-width: 80px
         &__text-block
             position: relative
             width: 100%
-            max-width: 300px
+            max-width: 270px
             white-space: nowrap
             .mantine-Tooltip-root
                 width: 100%
             p
                 line-height: 1.1rem
-            @include search-result(300px)
+            @include search-result(270px)
