Удаление мнемосхем. Добавлено удаление данных из таблицы БД Mnemoscheme

--- a/RealtimeDataPortal/ClientApp/src/components/mnemoscheme/mnemoscheme.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/mnemoscheme/mnemoscheme.sass
@@ -3,10 +3,10 @@
 .info-block__mnemoscheme
     .fullscreen
         position: fixed
-        top: 0
-        right: 0
-        bottom: 0
-        left: 0
+        top: 10px
+        right: 50px
+        bottom: 10px
+        left: 10px
         overflow: auto
         z-index: 10
         @include scrollbar
