Устранение ошибки при переходе в редактор продуктов

--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -9,8 +9,14 @@
         padding: 0
         box-shadow: none
     a
+        display: flex
+        justify-content: flex-start
+        align-items: center
         text-decoration: none
         color: #000
+        svg
+            margin-left: .5rem
+            color: $main-color
     &__tag-info-button
         background-color: transparent
         outline: none
@@ -31,6 +37,7 @@
             caption-side: top
         th
             padding: .5rem .7rem
+            text-align: center
         td
             min-width: 4rem
             padding: .5rem .7rem
